overflow problem fixed

--- a/src/general.css
+++ b/src/general.css
@@ -10,6 +10,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .heading-secondary {
   color: #4f61b9;
   font-size: 2.4rem;
